--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,10 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Debug - Print Directory of bin
+      run: pwd
+      working-directory: src/CityInfo.API/bin/
+
     - name: Store build artifacts
       uses: actions/upload-artifact@v3
       with:
