--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore -c Release
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Debug - Print Directory of bin
@@ -35,4 +35,4 @@ jobs:
       with:
         name: build-artifacts
         path: |
-           ./dotnet-city-api/src/CityInfo.API/bin/Release/net6.0/
+           /src/CityInfo.API/bin/Release/net6.0/
