--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,4 +44,4 @@ jobs:
       with:
         name: build-artifacts
         path: |
-           /src/CityInfo.API/bin/Release/net6.0/
+           src/CityInfo.API/bin/Release/net6.0
