--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+env:
+  AZURE_WEBAPP_NAME: cityapi
+  AZURE_WEBAPP_PACKAGE_PATH: "./CityInfo.API.dll"
 jobs:
   build:
 
@@ -45,3 +47,16 @@ jobs:
         name: build-artifacts
         path: |
            src/CityInfo.API/bin/Release/net6.0/*.dll
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download a single artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: build-artifacts
+    - name: Deploying to azure
+      uses: actions/webapps-deploy@v2
+      with:
+        app-name: ${{env.AZURE_WEBAPP_NAME}}
+        publish-profile: ${{secrets.AZURE_PUBLISH_PROFILE_CITYINFOAPI}}
+        package: "${{AZURE_WEBAPP_PACKAGE_PATH}}"
