--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -59,4 +59,4 @@ jobs:
       with:
         app-name: ${{env.AZURE_WEBAPP_NAME}}
         publish-profile: ${{secrets.AZURE_PUBLISH_PROFILE_CITYINFOAPI}}
-        package: "${{AZURE_WEBAPP_PACKAGE_PATH}}"
+        package: "${{env.AZURE_WEBAPP_PACKAGE_PATH}}"
