--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 env:
   AZURE_WEBAPP_NAME: cityapi
-  AZURE_WEBAPP_PACKAGE_PATH: "./CityInfo.API.dll"
+  AZURE_WEBAPP_PACKAGE_PATH: "."
 jobs:
   build:
 
