--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,4 +50,4 @@ jobs:
         app-name: ${{env.AZURE_WEBAPP_NAME}}
         publish-profile: ${{secrets.AZURE_PUBLISH_PROFILE_CITYINFOAPI}}
         package: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
-        start-command: 'dotnet CityInfo.API.dll'
+        startup-command: 'dotnet CityInfo.API.dll'
