--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal --configuration Release
     - name: Publish
-      run: dotnet publish --no-restore --configuration Release --self-contained true
+      run: dotnet publish --no-restore --configuration Release -r linux-x64 --self-contained true 
     - name: Store build artifacts
       uses: actions/upload-artifact@v3
       with:
