--- a/src/CityInfo.API/appsettings.json
+++ b/src/CityInfo.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "mailSettings": {
-    "mailToAddress": "developer@mycompany.com",
+    "mailToAddress": "#{MAILTOADDRESS}#",
     "mailFromAddress": "noreply@mycompany.com"
   },
   "AllowedHosts": "*"
