--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,6 +11,9 @@ on:
 env:
   AZURE_WEBAPP_NAME: cityapi
   AZURE_WEBAPP_PACKAGE_PATH: "."
+
+
+  
 jobs:
   build:
 
@@ -36,7 +39,9 @@ jobs:
         name: build-artifacts
         path: |
            src/CityInfo.API/bin/Release/net6.0/publish
-  deploy:
+
+  #Deploying to staging environment
+  deploy_stage:
     needs: build  
     environment: stage
     runs-on: ubuntu-latest
@@ -54,9 +59,35 @@ jobs:
         MAILTOADDRESS: ${{vars.MAILTOADDRESS}}
         
         
-    - name: Deploying to azure
+    - name: Deploying to azure (stage)
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{env.AZURE_WEBAPP_NAME}}
         publish-profile: ${{secrets.AZURE_PUBLISH_PROFILE_CITYINFOAPI}}
+        package: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
+
+  #Deploying to production environment
+  deploy_prod:
+    needs: deploy_stage  
+    environment: prod
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download a single artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: build-artifacts
+
+    # replacing tokens
+    - uses: cschleiden/replace-tokens@v1.2
+      with:
+        files: '["**/*.json"]'
+      env:
+        MAILTOADDRESS: ${{vars.MAILTOADDRESS}}
+        
+        
+    - name: Deploying to azure (production)
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{env.AZURE_WEBAPP_NAME}}
+        publish-profile: ${{secrets.AZURE_PUBLISH_PROFILE_CITYINFOAPI_PROD}}
         package: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
