--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_6e8ece5a406b417fb5048a499402751c }}/cityapi:${{ github.sha }}
+        tags: index.docker.io/syedjunaiddocker/dotnetcityapi/cityapi:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
