--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         push: true
         tags: index.docker.io/syedjunaiddocker/dotnetcityapi/cityapi:${{ github.sha }}
-        file: ./Dockerfile
+        file: src/CityInfo.API/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
