--- a/src/CityInfo.API/Dockerfile
+++ b/src/CityInfo.API/Dockerfile
@@ -8,7 +8,7 @@ EXPOSE 5001
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY . .
+COPY ./src/CityInfo.API/. .
 RUN dotnet restore
 RUN dotnet publish -c Release -o /out
 
