--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -37,6 +37,9 @@ jobs:
 
 
         file: src/CityInfo.API/Dockerfile
+    - name: Test
+      run: |
+          docker run --rm index.docker.io/syedjunaiddocker/dotnetcityapi:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
