--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -46,9 +46,8 @@ jobs:
         docker rm testcontainer
     - uses: dorny/test-reporter@v1
       with:
-        artifact: test-results
         name: UnitTest Results
-        path: '*.trx'
+        path: '/test-results/*.trx'
         reporter: dotnet-trx
         fail-on-error: 'true'
 
