--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -44,10 +44,11 @@ jobs:
         docker create --name testcontainer $id
         docker cp testcontainer:/test-results ./test-results
         docker rm testcontainer
+        ls ./test-results
     - uses: dorny/test-reporter@v1
       with:
         name: UnitTest Results
-        path: '/test-results/*.trx'
+        path: './test-results/*.trx'
         reporter: dotnet-trx
         fail-on-error: 'true'
 
