--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -40,11 +40,12 @@ jobs:
     - name: Display Test Results
       shell: pwsh
       run: |
+        docker images ls -a
         $id = docker images -q 
         docker create --name testcontainer $id
         docker cp testcontainer:/test-results ./test-results
         docker rm testcontainer
-        ls ./test-results
+        ls
     - uses: dorny/test-reporter@v1
       with:
         name: UnitTest Results
