--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -43,15 +43,15 @@ jobs:
         docker images ls -a
         $id = docker images -q 
         docker create --name testcontainer $id
-        docker cp testcontainer:/test-results ./test-results
+        docker cp testcontainer:/test-results ./testresults
         docker rm testcontainer
         ls
-    #- uses: dorny/test-reporter@v1
-    #  with:
-    #    name: UnitTest Results
-    #    path: './test-results/*.trx'
-    #    reporter: dotnet-trx
-    #    fail-on-error: 'true'
+    - uses: dorny/test-reporter@v1
+      with:
+        name: UnitTest Results
+        path: './testresults/*.trx'
+        reporter: dotnet-trx
+        fail-on-error: 'true'
 
     
 
