--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -43,7 +43,8 @@ jobs:
         docker images ls -a
         $id = docker images -q 
         docker create --name testcontainer $id
-        docker cp testcontainer:/test-results/test_results.trx ./testresults
+        docker exec testcontainer ls
+        docker cp testcontainer:/test-results ./test-results
         docker rm testcontainer
         ls
     - uses: dorny/test-reporter@v1
