--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -40,8 +40,10 @@ jobs:
     - name: Display Test Results
       shell: pwsh
       run: |
-        $id = docker images -q --filter "label=type=webapp"
-        docker create --name testcontainer index.docker.io/syedjunaiddocker/dotnetcityapi:${{ github.sha }}
+        $images = docker images
+        echo $images
+        $id =  docker images -q --filter "label=type=webapp"
+        docker create --name testcontainer $id
         docker cp testcontainer:/test-results ./test-results
         docker rm testcontainer
         ls
