--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -35,12 +35,12 @@ jobs:
     - name: Build and push container image to registry    
       shell: pwsh
       run: |        
-        docker build -t index.docker.io/${{ secrets.AzureAppService_ContainerUsername_6e8ece5a406b417fb5048a499402751c }}/dotnetcityapi:${{ github.sha }} . 
-        docker push index.docker.io/${{ secrets.AzureAppService_ContainerUsername_6e8ece5a406b417fb5048a499402751c }}/dotnetcityapi:${{ github.sha }}
+        docker build -t index.docker.io/syedjunaiddocker/dotnetcityapi:${{ github.sha }} . 
+        docker push index.docker.io/syedjunaiddocker/dotnetcityapi:${{ github.sha }}
 
       #uses: docker/build-push-action@v5
-      #with:
       #  push: true
+      #with:
       #  #tags: "index.docker.io/${{ secrets.AzureAppService_ContainerUsername_6e8ece5a406b417fb5048a499402751c }}/dotnetcityapi:${{ github.sha }}"
       #  tags: index.docker.io/syedjunaiddocker/dotnetcityapi:${{ github.sha }}
       #  file: src/CityInfo.API/Dockerfile
