--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Build and push container image to registry    
       shell: pwsh
       run: |        
-        docker build -t syedjunaiddocker/dotnetcityapi:${{ github.sha }} . 
+        docker build . -t syedjunaiddocker/dotnetcityapi:${{ github.sha }} 
         docker push syedjunaiddocker/dotnetcityapi:${{ github.sha }}
 
       #uses: docker/build-push-action@v5
