--- a/.github/workflows/main_sjwebapp1.yml
+++ b/.github/workflows/main_sjwebapp1.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy container app to Azure Web App - sjwebapp1
+name: CI/CD Container to Azure App Service
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
         password: ${{ secrets.AzureAppService_ContainerPassword_864951c10ca340c9af3fb04664e93cd1 }}
     
 
-    - name: Build and push container image to registry    
+    - name: Build Image
       shell: pwsh
       run: |        
         docker build . -t  ${{env.imagePath}} -f src/CityInfo.API/Dockerfile
@@ -70,6 +70,7 @@ jobs:
 
 
   deploy:
+    name: Deploy Image to Azure
     runs-on: ubuntu-latest
     needs: build
     environment:
